@@ -27,32 +27,40 @@
 
 package ar.com.fdvs.dj.test.domain.chart.builder;
 
-import ar.com.fdvs.dj.domain.*;
+import java.awt.Color;
+import java.util.HashMap;
+import java.util.Map;
+
+import ar.com.fdvs.dj.domain.CustomExpression;
+import ar.com.fdvs.dj.domain.DJHyperLink;
+import ar.com.fdvs.dj.domain.DynamicJasperDesign;
+import ar.com.fdvs.dj.domain.DynamicReport;
+import ar.com.fdvs.dj.domain.StringExpression;
+import ar.com.fdvs.dj.domain.Style;
 import ar.com.fdvs.dj.domain.builders.ColumnBuilder;
 import ar.com.fdvs.dj.domain.builders.DynamicReportBuilder;
 import ar.com.fdvs.dj.domain.chart.DJChart;
 import ar.com.fdvs.dj.domain.chart.DJChartOptions;
 import ar.com.fdvs.dj.domain.chart.builder.DJScatterChartBuilder;
 import ar.com.fdvs.dj.domain.chart.plot.DJAxisFormat;
-import ar.com.fdvs.dj.domain.constants.*;
+import ar.com.fdvs.dj.domain.constants.Border;
 import ar.com.fdvs.dj.domain.constants.Font;
+import ar.com.fdvs.dj.domain.constants.HorizontalAlign;
 import ar.com.fdvs.dj.domain.constants.Transparency;
+import ar.com.fdvs.dj.domain.constants.VerticalAlign;
 import ar.com.fdvs.dj.domain.entities.columns.AbstractColumn;
 import ar.com.fdvs.dj.domain.entities.columns.PropertyColumn;
 import ar.com.fdvs.dj.domain.hyperlink.LiteralExpression;
 import ar.com.fdvs.dj.test.BaseDjReportTest;
+import net.sf.jasperreports.charts.design.JRDesignChart;
 import net.sf.jasperreports.charts.design.JRDesignScatterPlot;
 import net.sf.jasperreports.charts.design.JRDesignXyDataset;
+import net.sf.jasperreports.charts.type.EdgeEnum;
 import net.sf.jasperreports.engine.JRFont;
-import net.sf.jasperreports.engine.design.JRDesignChart;
 import net.sf.jasperreports.engine.design.JRDesignGroup;
 import net.sf.jasperreports.engine.design.JRDesignVariable;
 import net.sf.jasperreports.engine.type.LineStyleEnum;
 import net.sf.jasperreports.view.JasperViewer;
-
-import java.awt.*;
-import java.util.HashMap;
-import java.util.Map;
 
 /**
  * This example demonstrates that you can make a chart using an Expression column
@@ -60,12 +68,13 @@ import java.util.Map;
 public class ExpressionColumnInChartTest extends BaseDjReportTest {
 	private DynamicReportBuilder drb;
 	private JRDesignChart chart;
-	
-	protected void setUp() throws Exception {
+
+	@Override
+    protected void setUp() throws Exception {
 		super.setUp();
 		drb = new DynamicReportBuilder();
 
-		Style headerStyle = new Style();
+		final Style headerStyle = new Style();
 		headerStyle.setFont(Font.VERDANA_MEDIUM_BOLD);
 		headerStyle.setBorderBottom(Border.PEN_2_POINT());
 		headerStyle.setHorizontalAlign(HorizontalAlign.CENTER);
@@ -73,54 +82,56 @@ public class ExpressionColumnInChartTest extends BaseDjReportTest {
 		headerStyle.setBackgroundColor(Color.DARK_GRAY);
 		headerStyle.setTextColor(Color.WHITE);
 		headerStyle.setTransparency(Transparency.OPAQUE);
-		drb.setDefaultStyles(null, null, headerStyle, null);			
-		
-		AbstractColumn columnCode = ColumnBuilder.getNew()
-		.setColumnProperty("id", Long.class.getName()).setTitle("ID")
-		.setWidth(new Integer(40)).build();
-		AbstractColumn columnaQuantity = ColumnBuilder.getNew()
-		.setColumnProperty("quantity", Long.class.getName()).setTitle(
-				"Quantity").setWidth(new Integer(80)).build();
+		drb.setDefaultStyles(null, null, headerStyle, null);
 
-        AbstractColumn columnAmount = ColumnBuilder.getNew()
+		final AbstractColumn columnCode = ColumnBuilder.getNew()
+		.setColumnProperty("id", Long.class.getName()).setTitle("ID")
+		.setWidth(40).build();
+		final AbstractColumn columnaQuantity = ColumnBuilder.getNew()
+		.setColumnProperty("quantity", Long.class.getName()).setTitle(
+				"Quantity").setWidth(80).build();
+
+        final AbstractColumn columnAmount = ColumnBuilder.getNew()
                 .setTitle("Amount")
                 .setCustomExpression(new CustomExpression() {
+                    @Override
                     public Object evaluate(Map fields, Map variables, Map parameters) {
                         return ((Float)fields.get("amount")) * 321;
                     }
 
+                    @Override
                     public String getClassName() {
                         return Float.class.getName();
                     }
                 })
-                .setWidth(new Integer(90)).build();
+                .setWidth(90).build();
 
         drb.addField("amount", Float.class.getName());
 
 		drb.addColumn(columnCode);
 		drb.addColumn(columnaQuantity);
 		drb.addColumn(columnAmount);
-		
+
 		drb.setUseFullPageWidth(true);
-		
-		DJAxisFormat xAxisFormat = new DJAxisFormat("x");
+
+		final DJAxisFormat xAxisFormat = new DJAxisFormat("x");
 		xAxisFormat.setLabelFont(Font.ARIAL_SMALL);
 		xAxisFormat.setLabelColor(Color.DARK_GRAY);
 		xAxisFormat.setTickLabelFont(Font.ARIAL_SMALL);
 		xAxisFormat.setTickLabelColor(Color.DARK_GRAY);
 		xAxisFormat.setTickLabelMask("#,###.#");
 		xAxisFormat.setLineColor(Color.DARK_GRAY);
-		
-		DJAxisFormat yAxisFormat = new DJAxisFormat("y");
+
+		final DJAxisFormat yAxisFormat = new DJAxisFormat("y");
 		yAxisFormat.setLabelFont(Font.ARIAL_SMALL);
 		yAxisFormat.setLabelColor(Color.DARK_GRAY);
 		yAxisFormat.setTickLabelFont(Font.ARIAL_SMALL);
 		yAxisFormat.setTickLabelColor(Color.DARK_GRAY);
 		yAxisFormat.setTickLabelMask("#,##0.0");
 		yAxisFormat.setLineColor(Color.DARK_GRAY);
-		
-		DJChart djChart = new DJScatterChartBuilder()
-		//chart		
+
+		final DJChart djChart = new DJScatterChartBuilder()
+		//chart
 		.setX(20)
 		.setY(10)
 		.setWidth(500)
@@ -155,23 +166,24 @@ public class ExpressionColumnInChartTest extends BaseDjReportTest {
 		.setYAxisFormat(yAxisFormat)
 		.build();
 		drb.addChart(djChart);
-		
-		DJHyperLink djlink = new DJHyperLink();
+
+		final DJHyperLink djlink = new DJHyperLink();
 		djlink.setExpression(new StringExpression() {
-			public Object evaluate(Map fields, Map variables, Map parameters) {				
+			@Override
+            public Object evaluate(Map fields, Map variables, Map parameters) {
 				return "http://thisIsAURL?count=" + variables.get("REPORT_COUNT");
 			}
 		});
 		djlink.setTooltip(new LiteralExpression("I'm a literal tootltip"));
 		djChart.setLink(djlink);
-		
-		Map<AbstractColumn, JRDesignVariable> vars = new HashMap<AbstractColumn, JRDesignVariable>();
+
+		final Map<AbstractColumn, JRDesignVariable> vars = new HashMap<>();
 		vars.put(columnaQuantity, new JRDesignVariable());
 		vars.put(columnAmount, new JRDesignVariable());
-		JRDesignGroup group = new JRDesignGroup();
+		final JRDesignGroup group = new JRDesignGroup();
 		chart = djChart.transform(new DynamicJasperDesign(), "", group, group, vars, 0);
 	}
-	
+
 	public void testChart() {
 		assertEquals(20, chart.getX());
 		assertEquals(10, chart.getY());
@@ -188,56 +200,57 @@ public class ExpressionColumnInChartTest extends BaseDjReportTest {
 		assertEquals(Color.DARK_GRAY, chart.getLegendColor());
 		testFont(Font.COURIER_NEW_MEDIUM_BOLD, chart.getLegendFont());
 		assertEquals(Color.WHITE, chart.getLegendBackgroundColor());
-		assertEquals(new Byte(DJChartOptions.EDGE_BOTTOM), chart.getLegendPositionValue().getValueByte());
-		assertEquals(new Byte(DJChartOptions.EDGE_TOP), chart.getTitlePositionValue().getValueByte());
-		assertEquals(LineStyleEnum.getByValue(new Byte(DJChartOptions.LINE_STYLE_DOTTED)), chart.getLineBox().getPen().getLineStyleValue());
+		assertEquals(EdgeEnum.values()[DJChartOptions.EDGE_BOTTOM], chart.getLegendPosition());
+		assertEquals(EdgeEnum.values()[DJChartOptions.EDGE_TOP], chart.getTitlePosition());
+		assertEquals(LineStyleEnum.values()[DJChartOptions.LINE_STYLE_DOTTED], chart.getLineBox().getPen().getLineStyle());
 		assertEquals(1f, chart.getLineBox().getPen().getLineWidth());
 		assertEquals(Color.DARK_GRAY, chart.getLineBox().getPen().getLineColor());
-		assertEquals(new Integer(5), chart.getLineBox().getPadding());
+		assertEquals(Integer.valueOf(5), chart.getLineBox().getPadding());
 	}
-	
+
 	public void testDataset() {
-		JRDesignXyDataset dataset = (JRDesignXyDataset) chart.getDataset();
+		final JRDesignXyDataset dataset = (JRDesignXyDataset) chart.getDataset();
 		assertEquals(2, dataset.getSeriesList().size());
 		assertNotNull(dataset.getSeries()[0].getLabelExpression().getText());
 		assertNotNull(dataset.getSeries()[0].getSeriesExpression().getText());
 	}
-	
+
 	public void testPlot() {
-		JRDesignScatterPlot plot = (JRDesignScatterPlot) chart.getPlot();
+		final JRDesignScatterPlot plot = (JRDesignScatterPlot) chart.getPlot();
 		assertEquals(Boolean.TRUE, plot.getShowShapes());
 		assertEquals(Boolean.FALSE, plot.getShowLines());
-		
+
 		assertNotNull(plot.getXAxisLabelExpression().getText());
 		testFont(Font.ARIAL_SMALL, plot.getXAxisLabelFont());
-		assertEquals(Color.DARK_GRAY, plot.getXAxisLabelColor());		
+		assertEquals(Color.DARK_GRAY, plot.getXAxisLabelColor());
 		testFont(Font.ARIAL_SMALL, plot.getXAxisTickLabelFont());
 		assertEquals(Color.DARK_GRAY, plot.getXAxisTickLabelColor());
 		assertEquals("#,###.#", plot.getXAxisTickLabelMask());
 		assertEquals(Color.DARK_GRAY, plot.getXAxisLineColor());
-		
+
 		assertNotNull(plot.getYAxisLabelExpression().getText());
 		testFont(Font.ARIAL_SMALL, plot.getYAxisLabelFont());
-		assertEquals(Color.DARK_GRAY, plot.getYAxisLabelColor());		
+		assertEquals(Color.DARK_GRAY, plot.getYAxisLabelColor());
 		testFont(Font.ARIAL_SMALL, plot.getYAxisTickLabelFont());
 		assertEquals(Color.DARK_GRAY, plot.getYAxisTickLabelColor());
 		assertEquals("#,##0.0", plot.getYAxisTickLabelMask());
 		assertEquals(Color.DARK_GRAY, plot.getYAxisLineColor());
 	}
-	
-	public DynamicReport buildReport() throws Exception {
+
+	@Override
+    public DynamicReport buildReport() throws Exception {
 		return drb.build();
 	}
 
 	private void testFont(Font djFont, JRFont jrFont) {
 		assertEquals(djFont.getFontName(), jrFont.getFontName());
-		assertEquals(djFont.getFontSize(), jrFont.getFontsize());
+		assertEquals(djFont.getFontSize(), jrFont.getFontSize());
 		assertEquals(djFont.isBold(), jrFont.isBold());
 		assertEquals(djFont.isItalic(), jrFont.isItalic());
 	}
-	
+
 	public static void main(String[] args) throws Exception {
-		ExpressionColumnInChartTest test = new ExpressionColumnInChartTest();
+		final ExpressionColumnInChartTest test = new ExpressionColumnInChartTest();
 		test.setUp();
 		test.testReport();
 		JasperViewer.viewReport(test.jp);
