@@ -33,14 +33,6 @@ import java.awt.Color;
 import java.util.HashMap;
 import java.util.Map;
 
-import net.sf.jasperreports.charts.design.JRDesignPieDataset;
-import net.sf.jasperreports.charts.design.JRDesignPiePlot;
-import net.sf.jasperreports.engine.JRFont;
-import net.sf.jasperreports.engine.design.JRDesignChart;
-import net.sf.jasperreports.engine.design.JRDesignGroup;
-import net.sf.jasperreports.engine.design.JRDesignVariable;
-import net.sf.jasperreports.engine.type.LineStyleEnum;
-import net.sf.jasperreports.view.JasperViewer;
 import ar.com.fdvs.dj.domain.DJCalculation;
 import ar.com.fdvs.dj.domain.DJHyperLink;
 import ar.com.fdvs.dj.domain.DynamicJasperDesign;
@@ -64,16 +56,26 @@ import ar.com.fdvs.dj.domain.entities.columns.AbstractColumn;
 import ar.com.fdvs.dj.domain.entities.columns.PropertyColumn;
 import ar.com.fdvs.dj.domain.hyperlink.LiteralExpression;
 import ar.com.fdvs.dj.test.BaseDjReportTest;
+import net.sf.jasperreports.charts.design.JRDesignChart;
+import net.sf.jasperreports.charts.design.JRDesignPieDataset;
+import net.sf.jasperreports.charts.design.JRDesignPiePlot;
+import net.sf.jasperreports.charts.type.EdgeEnum;
+import net.sf.jasperreports.engine.JRFont;
+import net.sf.jasperreports.engine.design.JRDesignGroup;
+import net.sf.jasperreports.engine.design.JRDesignVariable;
+import net.sf.jasperreports.engine.type.LineStyleEnum;
+import net.sf.jasperreports.view.JasperViewer;
 
 public class PieChartBuilderTest extends BaseDjReportTest {
-	private DynamicReportBuilder drb; 
+	private DynamicReportBuilder drb;
 	private JRDesignChart chart;
-	
-	protected void setUp() throws Exception {
+
+	@Override
+    protected void setUp() throws Exception {
 		super.setUp();
 		drb = new DynamicReportBuilder();
 
-		Style headerStyle = new Style();
+		final Style headerStyle = new Style();
 		headerStyle.setFont(Font.VERDANA_MEDIUM_BOLD);
 		headerStyle.setBorderBottom(Border.PEN_2_POINT());
 		headerStyle.setHorizontalAlign(HorizontalAlign.CENTER);
@@ -81,45 +83,45 @@ public class PieChartBuilderTest extends BaseDjReportTest {
 		headerStyle.setBackgroundColor(Color.DARK_GRAY);
 		headerStyle.setTextColor(Color.WHITE);
 		headerStyle.setTransparency(Transparency.OPAQUE);
-		drb.setDefaultStyles(null, null, headerStyle, null);		
-		
-		AbstractColumn columnState = ColumnBuilder.getNew()
+		drb.setDefaultStyles(null, null, headerStyle, null);
+
+		final AbstractColumn columnState = ColumnBuilder.getNew()
 		.setColumnProperty("state", String.class.getName()).setTitle(
-				"State").setWidth(new Integer(85)).build();
-		AbstractColumn columnBranch = ColumnBuilder.getNew()
+				"State").setWidth(85).build();
+		final AbstractColumn columnBranch = ColumnBuilder.getNew()
 		.setColumnProperty("branch", String.class.getName()).setTitle(
-				"Branch").setWidth(new Integer(85)).build();
-		AbstractColumn columnaQuantity = ColumnBuilder.getNew()
+				"Branch").setWidth(85).build();
+		final AbstractColumn columnaQuantity = ColumnBuilder.getNew()
 		.setColumnProperty("quantity", Long.class.getName()).setTitle(
-				"Quantity").setWidth(new Integer(80)).build();
-		AbstractColumn columnAmount = ColumnBuilder.getNew()
+				"Quantity").setWidth(80).build();
+		final AbstractColumn columnAmount = ColumnBuilder.getNew()
 		.setColumnProperty("amount", Float.class.getName()).setTitle(
-				"Amount").setWidth(new Integer(90)).build();
+				"Amount").setWidth(90).build();
 
 		drb.addColumn(columnState);
 		drb.addColumn(columnBranch);
 		drb.addColumn(columnaQuantity);
 		drb.addColumn(columnAmount);
-		
-		GroupBuilder gb1 = new GroupBuilder();
-		DJGroup g1 = gb1.setCriteriaColumn((PropertyColumn) columnState)
+
+		final GroupBuilder gb1 = new GroupBuilder();
+		final DJGroup g1 = gb1.setCriteriaColumn((PropertyColumn) columnState)
 				.addFooterVariable(columnAmount,DJCalculation.SUM)
 			.addFooterVariable(columnaQuantity,DJCalculation.SUM)
 			.addVariable("group_state_name", columnState, DJCalculation.FIRST)
-			.setGroupLayout(GroupLayout.DEFAULT) 
-			.build();		
-/*		GroupBuilder gb2 = new GroupBuilder(); 
+			.setGroupLayout(GroupLayout.DEFAULT)
+			.build();
+/*		GroupBuilder gb2 = new GroupBuilder();
   		DJGroup g2 = gb2.setCriteriaColumn((PropertyColumn) columnBranch)
-				.setGroupLayout(GroupLayout.VALUE_FOR_EACH) 
+				.setGroupLayout(GroupLayout.VALUE_FOR_EACH)
 				.build();*/
-		
+
 		drb.addGroup(g1);
 		//drb.addGroup(g2);
-		
+
 		drb.setUseFullPageWidth(true);
-		
-		DJChart djChart = new DJPieChartBuilder()
-		//chart		
+
+		final DJChart djChart = new DJPieChartBuilder()
+		//chart
 		.setX(20)
 		.setY(10)
 		.setWidth(500)
@@ -128,8 +130,9 @@ public class PieChartBuilderTest extends BaseDjReportTest {
 		.setBackColor(Color.LIGHT_GRAY)
 		.setShowLegend(true)
 		.setPosition(DJChartOptions.POSITION_FOOTER)
-		.setTitle(new StringExpression() {			
-			public Object evaluate(Map fields, Map variables, Map parameters) {
+		.setTitle(new StringExpression() {
+			@Override
+            public Object evaluate(Map fields, Map variables, Map parameters) {
 				return variables.get("group_state_name");
 			}
 		})
@@ -154,23 +157,24 @@ public class PieChartBuilderTest extends BaseDjReportTest {
 		.setCircular(true)
 		.build();
 		drb.addChart(djChart);
-		
-		DJHyperLink djlink = new DJHyperLink();
+
+		final DJHyperLink djlink = new DJHyperLink();
 		djlink.setExpression(new StringExpression() {
-			public Object evaluate(Map fields, Map variables, Map parameters) {				
+			@Override
+            public Object evaluate(Map fields, Map variables, Map parameters) {
 				return "http://thisIsAURL?count=" + variables.get("REPORT_COUNT");
 			}
 		});
-		djlink.setTooltip(new LiteralExpression("I'm a literal tootltip"));		
+		djlink.setTooltip(new LiteralExpression("I'm a literal tootltip"));
 		djChart.setLink(djlink);
-		
-		Map<AbstractColumn, JRDesignVariable> vars = new HashMap<AbstractColumn, JRDesignVariable>();
+
+		final Map<AbstractColumn, JRDesignVariable> vars = new HashMap<>();
 		vars.put(columnaQuantity, new JRDesignVariable());
 		vars.put(columnAmount, new JRDesignVariable());
-		JRDesignGroup group = new JRDesignGroup();
+		final JRDesignGroup group = new JRDesignGroup();
 		chart = djChart.transform(new DynamicJasperDesign(), "", group, group, vars, 0);
 	}
-	
+
 	public void testChart() {
 		assertEquals(20, chart.getX());
 		assertEquals(10, chart.getY());
@@ -180,44 +184,45 @@ public class PieChartBuilderTest extends BaseDjReportTest {
 		assertEquals(Boolean.TRUE, chart.getShowLegend());
 		assertNotNull(chart.getTitleExpression().getText());
 		assertEquals(Color.DARK_GRAY, chart.getTitleColor());
-		testFont(Font.ARIAL_BIG_BOLD, chart.getTitleFont());		
+		testFont(Font.ARIAL_BIG_BOLD, chart.getTitleFont());
 		assertNotNull(chart.getSubtitleExpression().getText());
 		assertEquals(Color.DARK_GRAY, chart.getSubtitleColor());
 		testFont(Font.COURIER_NEW_BIG_BOLD, chart.getSubtitleFont());
 		assertEquals(Color.DARK_GRAY, chart.getLegendColor());
 		testFont(Font.COURIER_NEW_MEDIUM_BOLD, chart.getLegendFont());
 		assertEquals(Color.WHITE, chart.getLegendBackgroundColor());
-		assertEquals(new Byte(DJChartOptions.EDGE_BOTTOM), chart.getLegendPositionValue().getValueByte() );
-		assertEquals(new Byte(DJChartOptions.EDGE_TOP), chart.getTitlePositionValue().getValueByte());
-        assertEquals(LineStyleEnum.getByValue(new Byte(DJChartOptions.LINE_STYLE_DOTTED)), chart.getLineBox().getPen().getLineStyleValue());
+		assertEquals(EdgeEnum.values()[DJChartOptions.EDGE_BOTTOM], chart.getLegendPosition());
+		assertEquals(EdgeEnum.values()[DJChartOptions.EDGE_TOP], chart.getTitlePosition());
+        assertEquals(LineStyleEnum.values()[DJChartOptions.LINE_STYLE_DOTTED], chart.getLineBox().getPen().getLineStyle());
 		assertEquals(1f, chart.getLineBox().getPen().getLineWidth());
 		assertEquals(Color.DARK_GRAY, chart.getLineBox().getPen().getLineColor());
-		assertEquals(new Integer(5), chart.getLineBox().getPadding());
+		assertEquals(Integer.valueOf(5), chart.getLineBox().getPadding());
 	}
-	
+
 	public void testDataset() {
-		JRDesignPieDataset dataset = (JRDesignPieDataset) chart.getDataset();
+		final JRDesignPieDataset dataset = (JRDesignPieDataset) chart.getDataset();
 		assertEquals(1, dataset.getSeriesList().size());
 	}
-	
+
 	public void testPlot() {
-		JRDesignPiePlot plot = (JRDesignPiePlot) chart.getPlot();
+		final JRDesignPiePlot plot = (JRDesignPiePlot) chart.getPlot();
 		assertEquals(Boolean.TRUE, plot.getCircular());
 	}
-	
-	public DynamicReport buildReport() throws Exception {		
+
+	@Override
+    public DynamicReport buildReport() throws Exception {
 		return drb.build();
 	}
 
 	private void testFont(Font djFont, JRFont jrFont) {
 		assertEquals(djFont.getFontName(), jrFont.getFontName());
-		assertEquals(djFont.getFontSize(), jrFont.getFontsize());
+		assertEquals(djFont.getFontSize(), jrFont.getFontSize());
 		assertEquals(djFont.isBold(), jrFont.isBold());
 		assertEquals(djFont.isItalic(), jrFont.isItalic());
 	}
-	
+
 	public static void main(String[] args) throws Exception {
-		PieChartBuilderTest test = new PieChartBuilderTest();
+		final PieChartBuilderTest test = new PieChartBuilderTest();
 		test.setUp();
 		test.testReport();
 		JasperViewer.viewReport(test.jp);
